# boilerplatePY

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
boilerplatepy/: __init__.py  foo.py
tests/: test_foo.py
